--- a/DeliverySite/DeliverySite/bin/DeliverySite.dll.config
+++ b/DeliverySite/DeliverySite/bin/DeliverySite.dll.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="UserDal" connectionString="Data Source=SHIMON\SQLEXPRESS;Initial Catalog=DeliveryDB;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="UserDal" connectionString="Data Source=DESKTOP-K5PBJUG\SQLEXPRESS;Initial Catalog=DeliveryDB;Integrated Security=True" providerName="System.Data.SqlClient" />
     
   </connectionStrings>
   <appSettings>
