--- a/DeliverySite/DeliverySite/DeliverySite.csproj
+++ b/DeliverySite/DeliverySite/DeliverySite.csproj
@@ -181,6 +181,7 @@
     <Content Include="Views\User\ConfirmSignUp.cshtml" />
     <Content Include="Views\Shared\_LayoutUsers.cshtml" />
     <Content Include="Views\Home\SignUp.cshtml" />
+    <Content Include="Views\User\Login.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
