--- a/DeliverySite/DeliverySite/Web.config
+++ b/DeliverySite/DeliverySite/Web.config
@@ -6,7 +6,8 @@
 <configuration>
   <connectionStrings>
     <add name="UserDal" connectionString="Data Source=SHIMON\SQLEXPRESS;Initial Catalog=DeliveryDB;Integrated Security=True" providerName="System.Data.SqlClient" />
-    
+    <add name="ManagerDal" connectionString="Data Source=SHIMON\SQLEXPRESS;Initial Catalog=DeliveryDB;Integrated Security=True" providerName="System.Data.SqlClient" />
+
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
