--- a/DeliverySite/DeliverySite/Web.config
+++ b/DeliverySite/DeliverySite/Web.config
@@ -7,6 +7,7 @@
   <connectionStrings>
     <add name="UserDal" connectionString="Data Source=SHIMON\SQLEXPRESS;Initial Catalog=DeliveryDB;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="ManagerDal" connectionString="Data Source=SHIMON\SQLEXPRESS;Initial Catalog=DeliveryDB;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="CompanyDal" connectionString="Data Source=SHIMON\SQLEXPRESS;Initial Catalog=DeliveryDB;Integrated Security=True" providerName="System.Data.SqlClient" />
 
   </connectionStrings>
   <appSettings>
