--- a/DeliverySite/DeliverySite/DeliverySite.csproj
+++ b/DeliverySite/DeliverySite/DeliverySite.csproj
@@ -135,6 +135,7 @@
     <Compile Include="Controllers\CompanyController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManagerController.cs" />
+    <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Dal\CompanyDal.cs" />
     <Compile Include="Dal\ManagerDal.cs" />
@@ -144,6 +145,7 @@
     </Compile>
     <Compile Include="Models\Company.cs" />
     <Compile Include="Models\Manager.cs" />
+    <Compile Include="Models\Product.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="ModelView\UserViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -192,6 +194,7 @@
     <Content Include="Views\Shared\_LayoutManagers.cshtml" />
     <Content Include="Views\Company\CompanyLogin.cshtml" />
     <Content Include="Views\Shared\_LayoutCompanies.cshtml" />
+    <Content Include="Views\Product\ShowProducts.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
