--- a/DeliverySite/DeliverySite/bin/DeliverySite.dll.config
+++ b/DeliverySite/DeliverySite/bin/DeliverySite.dll.config
@@ -8,6 +8,7 @@
     <add name="UserDal" connectionString="Data Source=SHIMON\SQLEXPRESS;Initial Catalog=DeliveryDB;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="ManagerDal" connectionString="Data Source=SHIMON\SQLEXPRESS;Initial Catalog=DeliveryDB;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="CompanyDal" connectionString="Data Source=SHIMON\SQLEXPRESS;Initial Catalog=DeliveryDB;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="ProductDal" connectionString="Data Source=SHIMON\SQLEXPRESS;Initial Catalog=DeliveryDB;Integrated Security=True" providerName="System.Data.SqlClient" />
 
   </connectionStrings>
   <appSettings>
