--- a/DeliverySite/UnitTestDeliverySite/UnitTestDeliverySite.csproj
+++ b/DeliverySite/UnitTestDeliverySite/UnitTestDeliverySite.csproj
@@ -60,6 +60,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.Entity" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Web.Helpers">
       <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.4\lib\net45\System.Web.Helpers.dll</HintPath>
     </Reference>
