--- a/DeliverySite/DeliverySite/packages.config
+++ b/DeliverySite/DeliverySite/packages.config
@@ -3,6 +3,10 @@
   <package id="angularjs" version="1.7.8.1" targetFramework="net461" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
   <package id="bootstrap" version="3.3.7" targetFramework="net461" />
+  <package id="Dapplo.HttpExtensions" version="0.6.22" targetFramework="net461" />
+  <package id="Dapplo.HttpExtensions.JsonSimple" version="0.6.22" targetFramework="net461" />
+  <package id="Dapplo.Jenkins" version="0.2.6" targetFramework="net461" />
+  <package id="Dapplo.Log" version="1.0.23" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="jQuery" version="3.3.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net461" />
