--- a/DeliverySite/UnitTestDeliverySite/packages.config
+++ b/DeliverySite/UnitTestDeliverySite/packages.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="bootstrap" version="3.3.7" targetFramework="net461" />
+  <package id="Dapplo.HttpExtensions" version="0.6.22" targetFramework="net461" />
+  <package id="Dapplo.HttpExtensions.JsonSimple" version="0.6.22" targetFramework="net461" />
+  <package id="Dapplo.Jenkins" version="0.2.6" targetFramework="net461" />
+  <package id="Dapplo.Log" version="1.0.23" targetFramework="net461" />
   <package id="jQuery" version="1.9.1" targetFramework="net461" />
   <package id="MSTest.TestAdapter" version="1.4.0" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.4.0" targetFramework="net461" />
