--- a/DeliverySite/UnitTestDeliverySite/UnitTestDeliverySite.csproj
+++ b/DeliverySite/UnitTestDeliverySite/UnitTestDeliverySite.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SignUpTest.cs" />
     <Compile Include="Sprint3Tests.cs" />
+    <Compile Include="Sprint4Tests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DeliverySite\DeliverySite.csproj">
@@ -141,12 +142,14 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\qunit.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-1.9.1.intellisense.js" />
     <Content Include="Scripts\jquery-1.9.1.js" />
     <Content Include="Scripts\jquery-1.9.1.min.js" />
+    <Content Include="Scripts\qunit.js" />
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
