--- a/DeliverySite/UnitTestDeliverySite/packages.config
+++ b/DeliverySite/UnitTestDeliverySite/packages.config
@@ -8,4 +8,5 @@
   <package id="jQuery" version="1.9.1" targetFramework="net461" />
   <package id="MSTest.TestAdapter" version="1.4.0" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.4.0" targetFramework="net461" />
+  <package id="QUnit-MVC" version="1.6.2.0" targetFramework="net461" />
 </packages>
